<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background">

    <TextView
        android:text="@string/add_info"
        style="@style/my_header" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_khyaban_asli"
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_height="wrap_content">

        <EditText
            android:hint="@string/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/khyaban_asli"

            android:editable="true"
            android:enabled="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_khyaban_faree"
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_height="wrap_content">

        <EditText
            android:hint="@string/alley"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/khyaban_faree"

            android:editable="true"
            android:enabled="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_height="wrap_content">

        <EditText
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address"

            android:enabled="true" />
        </android.support.design.widget.TextInputLayout>



</LinearLayout>