<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background"
    android:orientation="vertical">

    <TextView
        style="@style/my_header"
        android:text="@string/comminucation" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:editable="true"
            android:enabled="true"
            android:hint="@string/mobile"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:editable="true"
            android:enabled="true"
            android:hint="@string/tel"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:enabled="true"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>